hc-06:값 받아오며 배경바꾸기, mindwave:여기에 합치려했으나 gps 안돌아감, samplelocation:gps가 여기서만 되서 여기에 합치는중(현재 주소 이름으로 받기, 마인드웨이브값 받기 성공 - 그래프그리기 해야함), weather1:위도경도 주소로(이미 samplelocation에 합침), weather2:위도경도로 날씨정보 100~800 받아오기(합쳐야됨 + 100~800값을 isRainy변수 true, false로 변환필요)

--- a/samplelocation/gradle/wrapper/gradle-wrapper.properties
+++ b/samplelocation/gradle/wrapper/gradle-wrapper.properties
@@ -1,4 +1,4 @@
-#Sun Mar 12 08:48:41 KST 2017
+#Fri Jan 13 14:49:28 GMT+09:00 2017
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
